# WellnessBuddy

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
src/apis/: googleFitAPI.py
src/models/: anomaly_detector.py  ollama_client.py
src/utils/: sample_data_generator.py
